Load correct background image for home page nav on small screens.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,7 +170,7 @@ nav {
       margin-bottom: 0;
       background-color: #000;
       height: 102px;
-      background-image: url("../img/Monstrance-2000w.png");
+      background-image: url("../img/monstrance-2000w-op.jpg");
       background-size: 30vw;
       background-repeat: no-repeat;
       background-position-x: right;
